feat: Refactor Keycloak services to simplify RestClient initialization
- Updated KeycloakAdminService and KeycloakAuthService to use RestClient.create() directly instead of a builder.
- Enhanced SecurityConfig to include a custom CORS configuration and improved JWT role handling.
- Introduced RequestUser DTO for better JWT payload management and role resolution.
- Added constants for response messages and status codes to improve maintainability.
- Implemented a comprehensive exception handling mechanism with custom exceptions and a global exception handler.
- Created utility classes for parsing JWT headers and converting Keycloak roles to Spring Security authorities.
- Added custom access denied and authentication entry point handlers for better error responses.